--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,21 @@
   justify-content: center;
   align-items: center;
 }
+.robertDiv {
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  width: 0;
+}
+.myInput {
+  right: 1000%;
+  position: fixed;
+}
+
+/* .myInput {
+  overflow: hidden;
+  opacity: 0;
+} */
 
 .main {
   padding: 5rem 0;
@@ -118,6 +133,9 @@
 
 .logo {
   height: 1em;
+}
+.btn {
+  text-transform: lowercase;
 }
 
 @media (max-width: 600px) {
