--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -89,6 +89,35 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
+.popOver span {
+  display: block;
+  /* padding: 0.75rem; */
+  text-align: center;
+  border-radius: 8px;
+  font-size: 1.1rem;
+  margin-top: 8px;
+  background: white;
+  border: 2px solid #116e14;
+  opacity: 0;
+  color: black;
+  transition: opacity 0.5s ease-out;
+}
+
+.popOver:hover span {
+  opacity: 1;
+}
+
+/* .description span:before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: -6px;
+  z-index: -1;
+  left: 50px;
+  background-color: yellow;
+} */
+
 .grid {
   display: flex;
   align-items: center;
@@ -107,7 +136,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #116e14;
+  /* border: 1px solid #116e14; */
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
@@ -118,7 +147,7 @@
   /* color: #0070f3;
   border-color: #0070f3; */
   color: #189e1d;
-  border-color: #9e2b28;
+  /* border-color: #9e2b28; */
 }
 
 .card h3 {
