--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,16 +11,30 @@
 }
 .doc__navLinks {
   background-color: #282c34;
-  width: 80vw;
 }
 
 .doc__testing {
   color: white;
   font-weight: bold;
   margin-left: 10px;
+  width: 60vw;
+  flex: 7;
 }
 .doc__smallTitle {
   color: limegreen;
+}
+
+.doc__flexContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.doc__docLinks {
+  justify-self: flex-start;
+  flex: 1;
+}
+.doc__docLinks a {
+  color: white;
 }
 
 .robertDiv {
@@ -51,6 +65,7 @@
 }
 
 .footer {
+  color: white;
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
