--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,9 +32,14 @@
 .doc__docLinks {
   justify-self: flex-start;
   flex: 1;
+  margin-left: 10px;
 }
 .doc__docLinks a {
   color: white;
+}
+.doc__docLinks a:hover {
+  color: red;
+  cursor: pointer;
 }
 
 .robertDiv {
