--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Gayathri', sans-serif;
+  font-family: "Gayathri", sans-serif;
   background-color: #282c34;
 }
 
@@ -15,4 +15,4 @@ a {
   box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Gayathri&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Gayathri&display=swap");
