--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -168,13 +168,13 @@
   flex-wrap: wrap;
   color: #9e2b28;
 
-  max-width: 800px;
+  max-width: 80vw;
   margin-top: 3rem;
 }
 
 .card {
   margin: 1rem;
-  flex-basis: 45%;
+  /* flex-basis: 45%; */
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -184,14 +184,15 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
+.card:hover {
+  border: 2px solid red;
+  color: #189e1d;
+}
+
+/* .card:focus,
 .card:active {
   /* color: #0070f3;
-  border-color: #0070f3; */
-  color: #189e1d;
-  /* border-color: #9e2b28; */
-}
+  border-color: #0070f3; */ /* border-color: #9e2b28; */
 
 .card h3 {
   margin: 0 0 1rem 0;
@@ -214,7 +215,7 @@
 .header {
   position: absolute;
   right: 0;
-  top: -2vh;
+  top: 0.5vh;
 }
 
 @media (max-width: 600px) {
@@ -223,5 +224,3 @@
     flex-direction: column;
   }
 }
-
-
