--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,19 +1,55 @@
 .container {
   min-height: 100vh;
-  /* padding: 0 0.5rem; */
-  /* display: flex; */
+  box-sizing: border-box;
+  width: 1200px;
+  margin: 0 auto;
+  max-width: 100%;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.header {
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+.header__logo img {
+  display: block;
+  height: 60px;
+}
+.header__sources {
+  display: flex;
+  align-items: center;
+}
+.header__source {
+  display: block;
+  height: 30px;
+  margin: 0 0 0 10px;
+}
+
+.header__source:first-child {
+  margin: 0;
+}
+
+.header__source img {
+  display: block;
+  height: inherit;
+  width: auto;
+}
+
+.main {
+  flex: 1;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 .doc__container {
-  background-color: #282c34;
   padding-right: 3em;
   padding-left: 3em;
-}
-
-.doc__navLinks {
-  background-color: #282c34;
 }
 
 .doc__testing {
@@ -71,17 +107,9 @@
 .screenshot {
   border: 2px solid #116e14;
   border-radius: 15px;
-  margin-bottom: 1em;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #282c34;
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .footer {
@@ -139,6 +167,7 @@
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
+  cursor: pointer;
 }
 
 .popOver span {
@@ -177,6 +206,8 @@
 
   max-width: 80vw;
   margin-top: 3rem;
+  max-width: 100%;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -188,6 +219,7 @@
   text-decoration: none;
   /* border: 1px solid #116e14; */
   border-radius: 10px;
+  border: 2px solid transparent;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
@@ -243,17 +275,4 @@
 }
 .btn {
   text-transform: lowercase;
-}
-
-.header {
-  position: absolute;
-  right: 0;
-  top: 0.5vh;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
 }
